--- a/web_app/Dockerfile
+++ b/web_app/Dockerfile
@@ -9,8 +9,8 @@ COPY . /usr/src/app
 
 RUN yarn install --force
 
-RUN yarn build
-COPY . /usr/src/app
+RUN yarn run build
+
 EXPOSE 3000
 
-CMD ["node_modules/.bin/next", "dev"]
+CMD [ "yarn", "run", "dev" ]
